# consulting-ai

./: .gitignore  .vercelignore  AUTH_PROGRESS.md  CHATKIT_PERSISTENCE.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DEPLOY_QUICK_START.md  MULTI_USER_SETUP.md  QUICK_REFERENCE.md  README.md  SETUP_NEW_REPO.md  STORAGE_OPTIONS.md  SUPABASE_SETUP.md  TEST_LOCAL.md  package-lock.json  package.json  requirements.txt  supabase_schema.sql  vercel.json
api/: index.py  requirements.txt
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: auth.py  broken_main.py  chat.py  constants.py  consulting_store.py  main.py  old_main.py  opportunity_store.py  supabase_chatkit_store.py  supabase_store.py  task_store.py
frontend/: .env.example  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AddArtifactModal.tsx  ChatKitPanel.tsx  ConversationSidebar.tsx  CreateOpportunityModal.tsx  Home.tsx  Login.tsx  OpportunityContextBar.tsx  OpportunityDrawer.tsx  OpportunityList.tsx  OpportunityPanel.tsx  OpportunitySelector.tsx  SmartActions.tsx  Toast.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useOpportunity.ts
frontend/src/lib/: api.ts  config.ts
